--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-  background-color: rgb(41, 41, 41);
+  background-color: #03001e;
   height: 100%;
   display: flex;
   justify-content: space-between;
@@ -34,6 +34,112 @@ ul {
   font-weight: 600;
 }
 
-img {
+.logo {
   height: 100px;
+}
+main {
+  background: #211b59;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  width: 100%;
+}
+
+/* about me */
+
+#yo {
+  margin-top: 10px;
+  padding: 30px 0;
+  max-width: 1200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.sobremi {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 50%;
+}
+.sobremi h1 {
+  font-size: 48px;
+  width: 80%;
+  min-width: 500px;
+  font-weight: 800;
+}
+.sobremi p {
+  font-size: 15px;
+  width: 80%;
+}
+.fotomia {
+  width: 300px;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+/*habilidades mias */
+
+#habilities {
+  padding: 70px 0;
+  max-width: 1200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 50px;
+}
+#habilities h2 {
+  font-size: 40px;
+  font-weight: 800;
+}
+.programacion {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.programacion img {
+  height: 100px;
+}
+.diseño {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.TDG {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 60px;
+}
+.diseño img {
+  height: 100px;
+}
+
+/* Contacto/formulario */
+
+#contactarme {
+  padding: 20px 0;
+  max-width: 1000px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+#contactarme h2 {
+  font-size: 40px;
+  width: 80%;
+  min-width: 500px;
+  font-weight: 800;
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 40px;
 }
