--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-  background-color: #03001e;
+  background-color: #211b59;
   height: 100%;
   display: flex;
   justify-content: space-between;
@@ -38,7 +38,7 @@ ul {
   height: 100px;
 }
 main {
-  background: #211b59;
+  background: #03001e;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -84,13 +84,13 @@ main {
 /*habilidades mias */
 
 #habilities {
-  padding: 70px 0;
+  padding-top: 70px;
   max-width: 1200px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 50px;
+  gap: 20px;
 }
 #habilities h2 {
   font-size: 40px;
@@ -101,10 +101,10 @@ main {
   justify-content: space-evenly;
   align-items: flex-start;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 10px;
 }
 .programacion img {
-  height: 100px;
+  height: 200px;
 }
 .diseño {
   display: flex;
