--- a/style.css
+++ b/style.css
@@ -12,13 +12,14 @@ body {
 }
 
 header {
-  background-color: #211b59;
+  background: linear-gradient(to bottom, #211b55, #03001e);
   height: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 65px;
   padding: 0 30px;
+  z-index: 2;
 }
 
 ul {
@@ -56,35 +57,45 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.sobremi {
-  display: flex;
   flex-direction: column;
-  gap: 20px;
-  width: 50%;
 }
-.sobremi h1 {
-  font-size: 48px;
+#yo h1 {
+  font-size: 60px;
   width: 80%;
   min-width: 500px;
   font-weight: 800;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+.sobremi {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 60%;
 }
 .sobremi p {
   font-size: 15px;
-  width: 80%;
+  width: 70%;
 }
 .fotomia {
-  width: 300px;
-  padding: 20px;
+  width: 60%;
   display: flex;
   justify-content: center;
-  gap: 10px;
+  align-items: flex-start;
+}
+.yo {
+  width: 250px;
+  height: 300px;
+  border-radius: 10px;
+  border: solid;
+  border-color: #211b55;
 }
 
 /*habilidades mias */
 
 #habilities {
-  padding-top: 70px;
+  padding-top: 40px;
   max-width: 1200px;
   display: flex;
   justify-content: center;
@@ -101,7 +112,7 @@ main {
   justify-content: space-evenly;
   align-items: flex-start;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 0;
 }
 .programacion img {
   height: 200px;
@@ -109,9 +120,9 @@ main {
 .diseño {
   display: flex;
   justify-content: space-evenly;
-  align-items: center;
+  align-items: flex-start;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 30px;
 }
 .TDG {
   display: flex;
@@ -142,4 +153,135 @@ main {
   justify-content: center;
   margin-top: 50px;
   margin-bottom: 40px;
+}
+.Dmail {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 15px;
+  margin-bottom: 20px;
+  color: white;
+}
+.mail {
+  background-color: #211b55;
+  color: white;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  height: 30px;
+  width: 250px;
+  padding: 10px;
+}
+.info {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 20px;
+}
+
+.area {
+  resize: none;
+  width: 400px;
+  height: 100px;
+  background-color: #211b55;
+  color: white;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  padding: 5px;
+  margin: 10px;
+}
+.enviar {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+.boton {
+  font-size: 15px;
+  font-weight: 800;
+  color: white;
+  border-radius: 10px;
+  background-color: #211b55;
+  width: 150px;
+  height: 40px;
+  margin: 40px;
+}
+/*footer*/
+.footer {
+  background: #03001e;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.linea {
+  border: solid;
+  border-color: rgb(182, 255, 255);
+  border-radius: 10px;
+  background-color: rgb(182, 255, 255);
+  width: 18%;
+  margin: 20px;
+}
+.footeramor {
+  background: #03001e;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100%;
+  padding: 20px;
+}
+@media (max-width: 992px) {
+  .fotomia {
+    width: 60%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  .linea {
+    border-radius: 10px;
+    width: 25%;
+    margin: 20px;
+  }
+}
+@media (max-width: 576px) {
+  #yo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    max-width: 1500px;
+  }
+  #yo h1 {
+    font-size: 50px;
+  }
+  .fotomia img {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    height: 320px;
+  }
+  .sobremi {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    width: 90%;
+    gap: 10px;
+  }
+  #habilities h2 {
+    font-size: 28px;
+  }
+  .programacion img {
+    height: 135px;
+  }
+  .diseño img {
+    height: 80px;
+    margin: 10px;
+  }
+  .linea {
+    width: 35%;
+  }
 }
