--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
+  border: 1px solid red;
 }
 
 body {
@@ -257,6 +258,7 @@ main {
   }
   #yo h1 {
     font-size: 50px;
+    min-width: 250px;
   }
   .fotomia img {
     display: flex;
@@ -275,6 +277,9 @@ main {
   }
   #habilities :first-child {
     font-size: 28px;
+  }
+  #contactarme h2 {
+    min-width: 250px;
   }
   .programacion img {
     height: 135px;
