--- a/style.css
+++ b/style.css
@@ -24,15 +24,24 @@ header {
 
 ul {
   display: flex;
-  gap: 50px;
+  gap: 100px;
 }
-
+.navbar {
+  display: flex;
+}
 .navbar,
 .navbar-list a {
   color: white;
 }
 .navbar-list li:first-child > a {
   font-weight: 600;
+}
+.navbar i {
+  font-size: 26px;
+  display: none;
+}
+#toggle-menu {
+  display: none;
 }
 
 .logo {
@@ -233,6 +242,9 @@ main {
   padding: 20px;
 }
 @media (max-width: 992px) {
+  .navbar ul {
+    gap: 100px;
+  }
   .fotomia {
     width: 60%;
     display: flex;
@@ -247,6 +259,35 @@ main {
   }
 }
 @media (max-width: 576px) {
+  .logo {
+    height: 85px;
+  }
+  .navbar ul {
+    background: #06012e;
+    width: 90%;
+    position: absolute;
+    top: 65px;
+    left: 5%;
+    right: 5%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0 0 15px 15px;
+    border: 3px solid #211b55;
+    border-top: 0;
+    display: none;
+    padding: 45px 30px;
+    gap: 100px;
+    z-index: 2;
+  }
+  .navbar i {
+    display: block;
+    cursor: pointer;
+  }
+  #toggle-menu:checked ~ .navbar-list {
+    display: flex;
+  }
+
   #yo {
     display: flex;
     flex-direction: column;
